--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "formdata-node": "^6.0.3",
     "formidable": "^3.5.1",
+    "lucide-react": "^0.452.0",
     "next": "14.2.5",
     "node-fetch": "^3.3.2",
     "openai": "^4.56.2",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "undici": "^6.19.8"
   },
   "devDependencies": {
